# prompt-request

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.e2e.yml  docker-compose.yml  frontpage.md
docs/: API.md  ops.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
migrations/: 0001_init.sql
scripts/: backup_db.sh  e2e.sh
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  ratelimit.rs  util.rs
src/routes/: accounts.rs  mod.rs  public.rs  requests.rs
src/storage/: mod.rs  s3.rs
tests/: e2e.rs
