[package]
name = "prompt-request"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.6"
dashmap = "5.5"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
thiserror = "1.0"
aws-config = "1.1"
aws-sdk-s3 = "1.19"
aws-credential-types = "1.1"
tower-http = { version = "0.5", features = ["trace", "fs"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
